--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,13 +8,13 @@
     <fragment
         android:id="@+id/carOwnersFragment"
         android:name="com.mylearning.devplacement.CarOwnersFragment"
-        android:label="CarOwnersFragment"
+        android:label="Car Owners"
         tools:layout="@layout/fragment_car_owners"
         />
     <fragment
         android:id="@+id/usersFragment"
         android:name="com.mylearning.devplacement.UsersFragment"
-        android:label="UsersFragment"
+        android:label="Car Users"
         tools:layout="@layout/fragment_users"
         />
 </navigation>
