--- a/app/src/main/res/layout/user_item_list.xml
+++ b/app/src/main/res/layout/user_item_list.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_launcher_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
