--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,7 +13,7 @@
         />
     <fragment
         android:id="@+id/usersFragment"
-        android:name="com.mylearning.devplacement.UsersFragment"
+        android:name="com.mylearning.devplacement.ui.user.UsersFragment"
         android:label="Car Users"
         tools:layout="@layout/fragment_users"
         />
