--- a/app/src/main/res/layout/user_item_list.xml
+++ b/app/src/main/res/layout/user_item_list.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/user_image"
+            android:id="@+id/user_image_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_launcher_foreground"
@@ -24,18 +24,18 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/user_name"
+            android:id="@+id/user_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.531"
-            app:layout_constraintStart_toEndOf="@+id/user_image"
+            app:layout_constraintStart_toEndOf="@+id/user_image_iv"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Joseph winners" />
 
         <TextView
-            android:id="@+id/user_date_created"
+            android:id="@+id/user_date_created_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -43,16 +43,16 @@
             tools:text="23-04-20" />
 
         <Button
-            android:id="@+id/user_button_filter"
+            android:id="@+id/user_button_filter_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/filter_str"
             android:background="@color/primary_color_70"
             android:layout_marginTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/user_name"
-            app:layout_constraintStart_toStartOf="@+id/user_name"
-            app:layout_constraintTop_toBottomOf="@+id/user_name" />
+            app:layout_constraintEnd_toEndOf="@+id/user_name_tv"
+            app:layout_constraintStart_toStartOf="@+id/user_name_tv"
+            app:layout_constraintTop_toBottomOf="@+id/user_name_tv" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
