display list in recyclerview

--- a/app/src/main/res/layout/user_item_list.xml
+++ b/app/src/main/res/layout/user_item_list.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/user_image_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:src="@drawable/ic_launcher_foreground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,8 +28,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.531"
             app:layout_constraintStart_toEndOf="@+id/user_image_iv"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Joseph winners" />
@@ -40,6 +38,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/user_button_filter_btn"
             tools:text="23-04-20" />
 
         <Button
