--- a/app/src/main/res/layout/fragment_car_owners.xml
+++ b/app/src/main/res/layout/fragment_car_owners.xml
@@ -6,16 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".CarOwnersFragment">
 
-    <TextView
-        android:id="@+id/car_owner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Car Owners"
-        android:textSize="30sp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/user_item_list" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
