--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -7,68 +7,196 @@
     android:layout_height="match_parent"
     tools:context=".UserDetailsFragment">
 
-    <ImageView
-        android:id="@+id/user_detail_image"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/sample_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
+        android:background="@drawable/user_detail_drawable"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <!--        back arrow-->
+        <ImageView
+            android:id="@+id/fragment_user_profile_back_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="37dp"
+            android:layout_marginTop="30dp"
+            android:contentDescription="@string/back_arrow_description"
+            android:src="@drawable/ic_back_arrow"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/white" />
+
+        <!--    Circular image view -->
+
+        <TextView
+            android:id="@+id/fragment_user_profile_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="@string/user_details_title_str"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/fragment_create_profile_one_iv"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:translationZ="2dp"
         android:src="@drawable/ic_launcher_foreground"
+        app:civ_border_color="@android:color/white"
+        app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/user_detail_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nested_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_detail_image"
-        tools:text="Jacob Janet" />
+        app:layout_constraintTop_toBottomOf="@+id/sample_layout"
+        app:layout_constraintVertical_bias="0.0">
 
-    <TextView
-        android:id="@+id/user_detail_gender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Male"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/user_detail_name"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@android:color/white">
 
-    <TextView
-        android:id="@+id/user_detail_color"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="green"
-        android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/user_detail_gender"
-        app:layout_constraintStart_toStartOf="parent"
-        />
 
-    <TextView
-        android:id="@+id/user_detail_countries"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Nigeria"
-        app:layout_constraintTop_toBottomOf="@id/user_detail_color"
-        android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
+            <TextView
+                android:id="@+id/user_detail_name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="48dp"
+                android:text="@string/joseph_mary_str"
+                android:textColor="@color/primary_color_100"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        />
+            <TextView
+                android:id="@+id/user_detail_date_create_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/female_str"
+                android:textColor="@color/primary_color_70"
+                android:layout_marginTop="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/user_detail_name_tv" />
 
-    <TextView
-        android:id="@+id/user_detail_created_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Sun, 01 Mar 2020 05:34:31"
-        app:layout_constraintTop_toBottomOf="@+id/user_detail_countries"
-        android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        />
+            <androidx.cardview.widget.CardView
+                android:id="@+id/detail_card_view_date_created"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="2dp"
+                app:contentPadding="16dp"
+                android:layout_margin="5dp"
+                app:layout_constraintTop_toBottomOf="@id/user_detail_date_create_tv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/date_create_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/detail_card_date_created_iv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_date_icon"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/detail_card_date_created_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/date_created_str"
+                        android:layout_marginStart="15dp"
+                        android:textSize="20sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/detail_card_date_created_iv"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/user_detail_card_view_color"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="5dp"
+                android:layout_margin="5dp"
+                app:cardElevation="2dp"
+                app:contentPadding="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/detail_card_view_date_created">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/color_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/detail_card_color_iv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_date_icon"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/detail_card_color_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:text="@string/color_all_str"
+                        android:textColor="@color/primary_color_70"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/detail_card_color_iv"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/colors_str"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/detail_card_color_tv"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
+
+
+            </androidx.core.widget.NestedScrollView >
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
