--- a/app/src/main/res/layout/fragment_car_owners.xml
+++ b/app/src/main/res/layout/fragment_car_owners.xml
@@ -16,7 +16,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/user_item_list" />
+        tools:listitem="@layout/car_owner_list_item" />
 
 
 
