--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,24 @@
     <color name="black_80">#FF111111</color>
     <color name="white">#FFFFFFFF</color>
     <color name="off_white">#F5F5F5</color>
+
+
+    <color name="green">#4CAF50</color>
+    <color name="violet">#9C27B0</color>
+    <color name="yellow">#FFC107</color>
+    <color name="blue">#3F51B5</color>
+    <color name="teal">#008080</color>
+    <color name="maroon">#B03060</color>
+    <color name="red">#F0291A</color>
+    <color name="aquamarine">#7fffd4</color>
+    <color name="orange">#FF5722</color>
+    <color name="mauv">#B784A7</color>
+    <color name="puce">#CC8899</color>
+    <color name="indigo">#4b0082</color>
+    <color name="turquoise"> #40e0d0</color>
+    <color name="goldenrod">#daa520 </color>
+    <color name="pink">#ffc0cb</color>
+    <color name="fushcia"> #FF00FF</color>
+    <color name="crimson"> #990000</color>
+    <color name="khaki">#f0e68c</color>
 </resources>
