--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.detail.UserDetailsFragment">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/sample_layout"
@@ -16,6 +16,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
 
         <!--        back arrow-->
         <ImageView
@@ -29,6 +30,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/white" />
+
 
         <!--    Circular image view -->
 
@@ -45,19 +47,31 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/fragment_create_profile_one_iv"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:translationZ="2dp"
-        android:src="@drawable/ic_launcher_foreground"
-        app:civ_border_color="@android:color/white"
-        app:civ_border_width="2dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.6" />
+    <!--    Close constraint layout-->
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/fragment_create_profile_one_iv"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:translationZ="2dp"
+            android:src="@drawable/ic_launcher_foreground"
+            app:civ_border_color="@android:color/white"
+            app:civ_border_width="2dp"
+            app:layout_constraintBottom_toTopOf="@id/guideline3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nested_scroll"
@@ -69,6 +83,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sample_layout"
         app:layout_constraintVertical_bias="0.0">
+
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -89,6 +105,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+
             <TextView
                 android:id="@+id/user_detail_date_create_tv"
                 android:layout_width="wrap_content"
@@ -100,8 +117,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/user_detail_name_tv" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
+<!--            First card  ....date -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/detail_card_view_date_created"
                 android:layout_width="match_parent"
@@ -144,6 +161,10 @@
 
             </androidx.cardview.widget.CardView>
 
+<!--            End of first card -->
+
+<!--            Start of second card -->
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/user_detail_card_view_color"
                 android:layout_width="match_parent"
@@ -156,10 +177,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/detail_card_view_date_created">
 
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/color_layout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
 
                     <ImageView
                         android:id="@+id/detail_card_color_iv"
@@ -181,21 +204,118 @@
                         app:layout_constraintStart_toEndOf="@+id/detail_card_color_iv"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
+                    <HorizontalScrollView
+                        android:id="@+id/color_horizontal_scroll_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/colors_str"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/detail_card_color_tv"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:scrollbars="none"
+                        app:layout_constraintStart_toStartOf="@+id/detail_card_color_iv"
+                        app:layout_constraintTop_toBottomOf="@+id/detail_card_color_tv"
+                        >
 
+                        <LinearLayout
+                            android:id="@+id/color"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            tools:text="Country"
+                            android:gravity="center"
+                            android:orientation="horizontal"
+                            android:textSize="18sp"
+                            android:layout_margin="2dp"/>
+
+                    </HorizontalScrollView>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
+<!--            End of color card-->
 
-            </androidx.core.widget.NestedScrollView >
+<!--            Start of country card -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/user_detail_card_view_country"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="5dp"
+                android:layout_margin="5dp"
+                app:cardElevation="2dp"
+                app:contentPadding="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/user_detail_card_view_color">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/country_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/detail_card_country_iv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_date_icon"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/detail_card_country_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:text="@string/countries_str"
+                        android:textColor="@color/primary_color_70"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/detail_card_country_iv"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                    <HorizontalScrollView
+                        android:id="@+id/country_horizontal_scroll_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:scrollbars="none"
+                        app:layout_constraintStart_toStartOf="@+id/detail_card_country_iv"
+                        app:layout_constraintTop_toBottomOf="@+id/detail_card_country_tv"
+                        >
+
+                        <LinearLayout
+                            android:id="@+id/country"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            tools:text="Country"
+                            android:gravity="center"
+                            android:orientation="horizontal"
+                            android:textSize="18sp"
+                            android:layout_margin="2dp"/>
+
+                    </HorizontalScrollView>
+
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+            </androidx.cardview.widget.CardView>
+
+
+
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+    </androidx.core.widget.NestedScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
 
