--- a/app/src/main/res/layout/user_item_list.xml
+++ b/app/src/main/res/layout/user_item_list.xml
@@ -53,10 +53,25 @@
             android:id="@+id/user_date_created_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
             android:textColor="@color/secondary_color_100"
+
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/user_name_tv"
+            app:layout_constraintTop_toBottomOf="@+id/user_name_tv"
+            tools:text="23-04-20" />
+
+        <ImageView
+            android:id="@+id/user_filter_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_filter_list"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="23-04-20" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="15dp"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
