--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,7 @@
         >
         <argument
             android:name="filter"
+            app:nullable="true"
             app:argType="com.mylearning.devplacement.model.User" />
     </fragment>
     <fragment
