--- a/app/src/main/res/layout/car_owner_list_item.xml
+++ b/app/src/main/res/layout/car_owner_list_item.xml
@@ -15,14 +15,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/car_owner_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/ic_launcher_foreground"
-            app:layout_constraintBottom_toBottomOf="parent"
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/car_owner_image_cv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="30dp"
+            android:elevation="6dp"
+            android:layout_margin="3dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageView
+                android:id="@+id/car_owner_image"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/ic_launcher_foreground"
+
+                />
+
+
+        </androidx.cardview.widget.CardView>
+
+
 
         <TextView
             android:id="@+id/car_owner_first_name_tv"
@@ -30,8 +46,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:layout_marginStart="8dp"
+            android:textColor="@color/primary_color_100"
+            android:textStyle="bold"
             app:layout_constraintHorizontal_bias="0.596"
-            app:layout_constraintStart_toEndOf="@+id/car_owner_image"
+            app:layout_constraintStart_toEndOf="@+id/car_owner_image_cv"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Joseph" />
 
@@ -41,6 +59,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:textColor="@color/primary_color_100"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/car_owner_first_name_tv"
             app:layout_constraintStart_toEndOf="@+id/car_owner_first_name_tv"
             app:layout_constraintTop_toTopOf="@+id/car_owner_first_name_tv"
@@ -50,9 +70,10 @@
             android:id="@+id/car_owner_brand_name_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/primary_color_70"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@+id/car_owner_image"
+            app:layout_constraintStart_toEndOf="@+id/car_owner_image_cv"
             app:layout_constraintTop_toBottomOf="@+id/car_owner_first_name_tv"
             android:text="@string/brand_str" />
 
